--- a/.releaserc.json
+++ b/.releaserc.json
@@ -16,7 +16,12 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
-    "@semantic-release/npm",
+    [
+      "@semantic-release/npm",
+      {
+        "provenance": true
+      }
+    ],
     "@semantic-release/github",
     [
       "@semantic-release/git",
